Use basic twitter bootstrap skeleton

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,6 @@
 @(message: String)
 
-@main("Welcome to Play 2.0") {
-    
-    @play20.welcome(message)
-    
+@main("Toomler Home") {
+    <h1>Welcome to toomler</h1>
+    <p>Here you go toomler!</p>
 }
